<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>dk.ku.di.dms.vms</groupId>
    <artifactId>vms-runtime-java</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>playground</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>playground</name>
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>18</maven.compiler.source>
    <maven.compiler.target>18</maven.compiler.target>

    <slf4j.version>1.7.32</slf4j.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>dk.ku.di.dms.vms</groupId>
      <artifactId>coordinator</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>dk.ku.di.dms.vms</groupId>
      <artifactId>sdk-embed</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>dk.ku.di.dms.vms.micro-tpcc</groupId>
      <artifactId>common</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>

      <dependency>
          <groupId>dk.ku.di.dms.vms.micro-tpcc</groupId>
          <artifactId>warehouse</artifactId>
          <version>1.0-SNAPSHOT</version>
          <scope>compile</scope>
      </dependency>

      <dependency>
          <groupId>dk.ku.di.dms.vms.micro-tpcc</groupId>
          <artifactId>customer</artifactId>
          <version>1.0-SNAPSHOT</version>
          <scope>compile</scope>
      </dependency>

      <dependency>
          <groupId>dk.ku.di.dms.vms.micro-tpcc</groupId>
          <artifactId>stock</artifactId>
          <version>1.0-SNAPSHOT</version>
          <scope>compile</scope>
      </dependency>

      <dependency>
          <groupId>dk.ku.di.dms.vms.micro-tpcc</groupId>
          <artifactId>order</artifactId>
          <version>1.0-SNAPSHOT</version>
          <scope>compile</scope>
      </dependency>

      <!--    <dependency>-->
<!--      <groupId>org.slf4j</groupId>-->
<!--      <artifactId>slf4j-simple</artifactId>-->
<!--      <version>${slf4j.version}</version>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->

  </dependencies>

  <build>
    <plugins>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>18</source>
          <target>18</target>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
